[package]
name = "quickvariant-macros"
version = "0.1.0"
edition = "2024"
authors = ["UldorAlberich13 <dotgitattributes@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/uldor-alberich/quickvariant"
keywords = [
    "variant",
    "quickvariant",
    "enum",
    "macro"
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
