[package]
name = "quickvariant"
version = "0.1.0"
edition = "2024"
description = "C++-style variant library."
authors = ["UldorAlberich13 <dotgitattributes@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/uldor-alberich/quickvariant"
keywords = [
    "variant",
    "quickvariant",
    "enum",
    "macro"
]

[dependencies.quickvariant-macros]
version = "0.1.0"
path = "../quickvariant-macros"